--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body{
     background-color: darkcyan;
 }
+h1{
+    text-align: center;
+    color: white;
+    text-transform:uppercase;
+}
 
 .box{
     background-color: khaki;
