--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ h1{
     color: white;
     text-transform:uppercase;
 }
-.box{
-    background-color: khaki;
+.box,
+.fizz,
+.buzz{
     color: black;
     height: 100px;
     width: 100px;
@@ -15,6 +16,10 @@ h1{
     justify-content: center;
     align-items: center;
 }
+
+.box{
+    background-color: khaki;
+}   
 .fizz{
     background-color:lightcoral;
 }
